# ecommerce-project

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  seed.sql
rocket-backend/: .dockerignore  Cargo.toml  Dockerfile.dev
rocket-backend/.sqlx/: query-17d95067d937687335d4dc50150dba68ca7c36ead97939e36756216b53b2f678.json  query-24d4e0f0180b64c9260c379a7337a1815d4198c62df620e0d43d4667b79a847e.json  query-3091fa26cdbc9ed009836c915568e060edf78aebf9576f1141ded0049df13162.json  query-33de585f492d980dd6fc2420352233a03fdc6ed226fdb338a31601f906805454.json  query-33f30b13afb0a2af52154f5ebeff85453836bd0c8385acc97341322a7c616009.json  query-5de93f79fe31ff26d6132da15523c332ae9b54498d8004d8814eba21e3a9b62e.json  query-6da86d50cf50a873ed45ca08536417938bd8a2d0147478094818ad7d9d9d7eaa.json  query-7256f2ca21b60f2f2edd38eef172ca5d2d8c6f203e705e772dcb9e22df256ef1.json  query-759bf055c3ddf5cc2224441b73b9f7981f12244dc1e545f1d404c4d7e4778622.json  query-7984092ffa63135eb37ffab16026eb5fd0d19709b244bcb826587b8e54294be4.json  query-840d304a9dbe03c2fa403b0f5b2e89f901bbf2b7e79550baf9a62cd96f27f71e.json  query-8a7e897c8b3c2283934998883978b773f977287c4443a11948352aba50d4984b.json  query-9440eddd55806f7ac3b5277073ca265a873b7ce8f5dde667e90387da151ff27f.json  query-9b8f6ede85d79db97bebbd96e18a9ba50b93a668c2ee22dd2812565dab15fc14.json  query-9cd88c1a98a5bfa93ae62113f8c1e6902a6c62b4186d69c447a65f489dad2a04.json  query-a0702d83b46ef675b3b9e36864201553f7d5c1f08563506992759a327776775c.json  (+10 more)
rocket-backend/src/: config.rs  db.rs  (+4 more)
(+145 files in other folders)
