[package]
name = "rocket-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "macros", "bigdecimal"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.15"
redis = { version = "0.25", features = ["tokio-comp"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
bigdecimal = { version = "0.3", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"], default-features = true}